# althea-link

./: .gitignore  README.md
.github/workflows/: deploy-prod.yml  deploy-test.yml  deploy.yml  frontend.yml
backend/: Cargo.toml  README.md  build.rs
backend/src/: database.rs  main.rs  server.rs
backend/src/althea/: abi_util.rs  delegations.rs  endpoints.rs  error.rs  governance.rs  mod.rs
backend/src/althea/ambient/: croc_query.rs  events.rs  knockout.rs  mod.rs  pools.rs  positions.rs  swap.rs
backend/src/althea/cosmos/: delegations.rs  governance.rs  mod.rs  staking.rs
backend/src/althea/database/: mod.rs  pools.rs  positions.rs
backend/src/althea/database/positions/: ambient.rs  knockout.rs  mod.rs  ranged.rs
backend/src/althea/database/tracking/: mod.rs  updates.rs
backend/src/althea/endpoints/: ambient.rs  cosmos.rs  mod.rs
deploy/: deploy-prod.sh  deploy-test.sh  deploy.sh  hosts-prod
frontend/: .env.example  global.d.ts  jest.config.js  jest.resolver.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/__mocks__/: gravity-bridge.ts  isows.ts  viem.ts  wagmi.ts
frontend/__tests__/clm/: liquidityLimits.test.ts
frontend/__tests__/stores/: transactionStore.test.ts
frontend/__tests__/utils/: networks.test.ts  tokenMath.test.ts
frontend/app/: layout.tsx
frontend/app/bridge/: bridging.tsx  util.ts
frontend/provider/: analytics.tsx  chainRegistry.tsx  rainbowProvider.tsx  useAutoConnect.ts
frontend/public/: manifest.json
frontend/stores/: transactionStore.tsx  useStore.tsx
(+220 files in other folders)
