[package]
name = "althea-link-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4", features = ["rustls-0_23"]}
actix-cors = "0.6"
rustls = "0.23"
rustls-pemfile = "0.3"
clap = { version = "4.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
rocksdb = "0.22.0"
log = "0.4"
env_logger = "0.11"
openssl-probe = "0.1"
rust_decimal = "1.32"
cosmos-sdk-proto-althea = "0.18"
althea_proto = "0.9"
futures = "0.3"
tonic = { version = "0.12.3", features = ["transport", "tls"] }
sha256 = "1"
prost = "0.13"
prost-types = "0.13"
chrono = "0.4"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
num_cpus = "1.14"
serde_json = "1.0"
actix-web-httpauth = "0.8"
num-traits = "0.2"
num-integer = "0.1"
deep_space = {version="2.27.1", features=["ethermint"]}
clarity = "1.5"
web30 = "1.5"

[dev-dependencies]
actix = "0.13"